--- a/src/ui/feature/feed/FeedPostListControls.pug
+++ b/src/ui/feature/feed/FeedPostListControls.pug
@@ -44,7 +44,7 @@ script.
 		local_sort = 'relevance'
 		search_mode_active = true
 
-menu.feed-controls
+menu.feed-post-list-controls
 	{#if search_mode_active}
 		TextInput(initial_value={search_query} type_action={value => local_search_query = value})
 		ButtonGroup(action={value => local_sort = value} options={search_sort_options} selected={local_sort})
@@ -57,5 +57,5 @@ menu.feed-controls
 		Button(action={activate_search_mode} text='Search...')
 
 style.
-	.feed-controls
+	.feed-post-list-controls
 		padding 1em
