--- a/src/ui/feature/post/PostComment.pug
+++ b/src/ui/feature/post/PostComment.pug
@@ -53,8 +53,8 @@ style.
 	.comment
 		display inline-block
 		margin 0.25em 0
+		max-width 480px
 		position relative
-		width 400px
 	:global(.comment > .md)
 		display inline-block
 	:global(.comment > .md img)
