--- a/src/ui/feature/post/PostCommentList.pug
+++ b/src/ui/feature/post/PostCommentList.pug
@@ -1,5 +1,5 @@
 script.
-	import { getContext, setContext } from 'svelte';
+	import { setContext } from 'svelte';
 	import api from '../../../api/index.js'
 
 	import Button from '../../common/Button.pug'
