--- a/src/ui/feature/post/PostTag.pug
+++ b/src/ui/feature/post/PostTag.pug
@@ -11,8 +11,8 @@ script.
 	text = switch name
 		when 'archived' then '❖ archived'
 		when 'locked' then '∅ locked'
-		when 'nsfw' then '⚠ nsfw'
-		when 'oc' then '© original content'
+		when 'nsfw' then '⚠'
+		when 'oc' then '©'
 		when 'quarantined' then '∅ quarantined'
 		when 'sticky' then '★ pinned'
 		else name
