--- a/src/ui/feature/subreddit/SubredditInfo.pug
+++ b/src/ui/feature/subreddit/SubredditInfo.pug
@@ -41,7 +41,9 @@ style.
 		padding 10px 0
 		justify-content flex-end
 	.subreddit-info-banner-image
+		aspect-ratio 8
 		border-radius 10px
+		object-fit cover
 	.subreddit-info-stats
 		margin-bottom 10px
 		width 100%
