--- a/src/ui/feature/user/UserProfile.pug
+++ b/src/ui/feature/user/UserProfile.pug
@@ -33,6 +33,8 @@ article.user
 				PostComment(short_id={short_id} out_of_context={true})
 
 style.
+	.user
+		width 640px
 	.user-age
 		color var(--c-text-weak)
 		font-size 12pt
